tests/NormalTests/paczka1/small_fuzzy/24764547.err
Error in line 4: p7ilS5bIf A450 52,3
Error in line 6: sdmXxiM A450 68,8
Error in line 14: A146 S98 90,6
Error in line 12: p7ilS5bIf A146 349,1
